<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.createappkey.CreateAppKeyBottomSheet"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/create_app_key"
        android:textColor="@color/blue_primary"
        android:fontFamily="@font/inter_medium"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_title_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_create_app_key_desc"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog"
        android:textColor="@color/blue_secondary"
        android:textSize="11sp"
        android:fontFamily="@font/inter"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_app_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_desc"
        android:hint="@string/new_app_key"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_app_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirmed_app_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_app_key"
        android:hint="@string/confirm_app_key"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirmed_app_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm_app_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_confirmed_app_key"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_primary"
        />
</androidx.constraintlayout.widget.ConstraintLayout>